update: added all pages and data. need to add artist[id] and fix mobile overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@
   --success: hsl(122, 39%, 49%);
   --warning: hsl(45, 100%, 50%);
   --error: hsl(4, 90%, 58%);
-  --shadow: 1.5px 3px 6px var(--text);
+  --shadow: 1.5px 1px 6px var(--text);
   --radius: 0;
   --head: 'Montserrat', sans-serif;
   --body: 'Montserrat', sans-serif;
@@ -21,6 +21,7 @@ body {
   position: relative;
   font-family: var(--body);
   font-weight: 300;
+  line-height: var(--line-height);
   background: var(--background);
   color: var(--text);
 }
@@ -60,11 +61,24 @@ button,
   justify-content: center;
 }
 
-input {
+.form-group {
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+input, textarea {
+  min-width: 300px;
+  max-width: 300px;
   border-radius: var(--radius);
   border: 1px solid var(--text);
   appearance: none;
   padding: 0.8rem;
+}
+
+textarea {
+  resize: none;
 }
 
 header {
@@ -79,8 +93,8 @@ header {
 
 nav {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: -10px;
+  right: -10px;
   z-index: 1;
   width: 320px;
   height: 100vh;
@@ -91,7 +105,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  box-shadow: var(--shadow);
+  box-shadow: -7px -1px 7px 0px rgba(0,0,0,0.4);
   transition: transform 0.3s ease-in-out;
 }
 
@@ -163,6 +177,17 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.list {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 70vw;
+}
+
+.list ul {
+  list-style: none;
 }
 
 footer {
